--- a/components/Header/ItalicsName/styles.module.css
+++ b/components/Header/ItalicsName/styles.module.css
@@ -1,12 +1,15 @@
 .container {
     display: flex;
-    justify-content: end;
-    padding: 10px;
+    justify-content: space-between;
 
 }
 
-.tangerine {
+
+
+.tangerine1 {
     font-family: 'Tangerine', cursive;
     font-size: 35px;
-    color: rgba(255, 255, 255, 0.804);
+    color: white;
+    justify-content: end;
+    display: flex;
 }
