--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -3,6 +3,5 @@
     padding: 0px 20px;
     height: 100vh;
     width: auto;
-    margin-left: 125px;
-    margin-right: 125px;
+    margin: 0px 80px;
 }
