--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,7 +1,6 @@
 .container {
-    background-color: rgb(0, 0, 0);
+    background-color: #e4d5bc;
     padding: 0px 20px;
-    height: 100vh;
     width: auto;
-    margin: 0px 80px;
+
 }
