--- a/components/Header/ItalicsName/styles.module.css
+++ b/components/Header/ItalicsName/styles.module.css
@@ -1,15 +1,33 @@
 .container {
     display: flex;
     justify-content: space-between;
+    max-width: 1800px;
+    margin-top: 45px;
 
 }
 
 
 
 .tangerine1 {
-    font-family: 'Tangerine', cursive;
-    font-size: 35px;
-    color: white;
     justify-content: end;
     display: flex;
+    font-size: 30px;
+    color: rgb(54, 54, 49);
+    font-family: 'Tangerine', cursive;
+    font-weight: 600;
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1),
+        -2px -2px 5px rgba(255, 255, 255, 0.1);
+
+}
+
+@media (min-width: 1600px) {
+    .container {
+        margin-top: 55px;
+
+    }
+
+    .tangerine1 {
+        font-size: 45px;
+    }
+
 }
