--- a/components/Header/Logos/styles.module.css
+++ b/components/Header/Logos/styles.module.css
@@ -1,1 +1,20 @@
-.container {}
+.container {
+    display: flex;
+    justify-content: center;
+    max-width: 650px;
+    margin-top: 30px;
+    align-items: center;
+    margin: 0px auto;
+}
+
+.logo {
+
+    max-width: 110px;
+    max-height: 90px;
+}
+
+.logo2 {
+
+    max-width: 100px;
+    max-height: 90px;
+}
