--- a/components/Header/Hero/styles.module.css
+++ b/components/Header/Hero/styles.module.css
@@ -50,3 +50,33 @@
 
     }
 }
+
+.sandstorm {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    /* Pone la arena detrás del texto */
+    pointer-events: none;
+}
+
+
+
+@keyframes sandstormEffect {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+
+    50% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
