--- a/components/Header/ItalicsName/styles.module.css
+++ b/components/Header/ItalicsName/styles.module.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: space-between;
     max-width: 1800px;
-    margin-top: 45px;
-
+    padding: 55px 60px;
 }
 
 
@@ -22,8 +21,8 @@
 
 @media (min-width: 1600px) {
     .container {
-        margin-top: 55px;
-
+        padding: 30px 20px;
+        padding-top: 30px;
     }
 
     .tangerine1 {
@@ -33,4 +32,8 @@
 }
 
 
-@media (max-width: 560px) {}
+@media (max-width: 560px) {
+    .container {
+        padding: 30px 20px;
+    }
+}
