--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,22 +1,15 @@
-.container {
-    background-color: #e4d5bc;
-    padding: 0px 20px;
-    width: auto;
-
-}
-
-@media (min-width: 1600px) {
-
-    .header {
-        height: 100vh;
-    }
-}
+@media (min-width: 1600px) {}
 
 @media (max-width: 560px) {
 
     .container {
-        padding: 0px 7px;
+        padding: 0px 0px;
 
     }
 
+
+}
+
+.container {
+    margin: 0px
 }
