--- a/sections/About/styles.module.css
+++ b/sections/About/styles.module.css
@@ -1,7 +1,7 @@
 .section {
     background: rgb(2, 0, 17);
     padding: 40px 60px;
-    height: 1200px;
+    height: 100%;
     justify-content: center;
     display: flex;
 }
