--- a/components/Projects/styles.module.css
+++ b/components/Projects/styles.module.css
@@ -26,13 +26,20 @@
 .cardContent p {
     color: white;
     font-family: 'Geist Mono';
+    max-width: fit-content;
+}
+
+.cardContent a {
+    color: white;
+    font-family: 'Geist Mono';
+    font-size: 13px;
 }
 
 .cardContent img {
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
+    object-fit: cover;
+    max-height: 300px;
+    height: 400px;
+    width: 400px;
     display: block;
     margin: 0 auto;
     border-radius: 12px;
