--- a/components/Projects/styles.module.css
+++ b/components/Projects/styles.module.css
@@ -77,3 +77,22 @@
     justify-content: end;
     display: flex;
 }
+
+
+@media (max-width: 560px) {
+    .container {
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .cardContainer {
+        max-width: 350px;
+    }
+
+    .cardContent img {
+        width: 100%;
+        height: 100%;
+        max-width: 550px;
+        max-height: 250px;
+    }
+}
