--- a/components/Expirience/styles.module.css
+++ b/components/Expirience/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     border: 6px rgb(235, 235, 235);
-    padding: 30px;
+    padding: 25px 40px;
     box-shadow:
         0px 0px 20px 8px rgb(68, 151, 199);
     ;
@@ -38,6 +38,7 @@
 
 .izquierda {
     width: 80%;
+    padding: 0px 15px;
 }
 
 .derecha {
