--- a/components/Studies/styles.module.css
+++ b/components/Studies/styles.module.css
@@ -69,3 +69,23 @@
     border-radius: 8px;
     font-size: 14px;
 }
+
+@media screen and (max-width: 600px) {
+    .contenedorDoble {
+        flex-direction: column;
+    }
+
+    .izquierda,
+    .derecha {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .derecha img {
+        max-width: 100%;
+        height: auto;
+    }
+}
