--- a/components/Expirience/styles.module.css
+++ b/components/Expirience/styles.module.css
@@ -51,3 +51,22 @@
 .img {
     border-radius: 20px;
 }
+
+@media (max-width: 600px) {
+    .contenedorDoble {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .derecha {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .img {
+        width: 100px;
+        height: 100px;
+    }
+}
